--- a/public/sass/_common.scss
+++ b/public/sass/_common.scss
@@ -1,4 +1,4 @@
-html, body.tactile { height: 100%; }
+html { height: 100%; }
 
 div.notification.question {
   width: 100%;
