--- a/public/sass/_landing_page.scss
+++ b/public/sass/_landing_page.scss
@@ -1,4 +1,5 @@
 body.tactile {
+  height: 100%;
   background: #e7e7e7 url(../image/tactile-body-bg.png) 0 0 repeat;
 }
 
